fix horizontal scroll

--- a/app/assets/stylesheets/case_studies/_slider.scss
+++ b/app/assets/stylesheets/case_studies/_slider.scss
@@ -94,12 +94,10 @@
     //wrap
     margin-right: auto;
     margin-left: auto;
-    padding-left: 20px;
+    padding-left: 100px;
     padding-right: 20px;
     width: calc(100% - 40px);
-    max-width: calc(1200px);
-
-    transform: translateX(4rem);
+    max-width: rem(1200px);
 
     > li {
       display: inline-block;
